src/objects/smagicinteract__SMS_Template_Type__c.object
<CustomObject>
    <fields>
        <fullName>Config_Version__c</fullName>
        <label>Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Related_Object_Types__c</fullName>
        <label>Related Object API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Template_Object_Type__c</fullName>
        <label>Object API Name</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SMS Template Type</label>
    <listViews>
        <fullName>smagicinteract__Template_Config</fullName>
        <columns>smagicinteract__Template_Object_Type__c</columns>
        <columns>smagicinteract__Related_Object_Types__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Template Type</label>
    </listViews>
    <nameField>
        <displayFormat>STN-{000000}</displayFormat>
        <label>SMS Template Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Template Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>